--- a/layouts/partials/fonts.html
+++ b/layouts/partials/fonts.html
@@ -11,7 +11,7 @@
 		font-style: italic;
 		font-weight: normal;
 		font-stretch: normal;
-		src: url(/fonts/Vollkorn-Italic-VariableFont_wght.woff2') format('woff2');
+		src: url('/fonts/Vollkorn-Italic-VariableFont_wght.woff2') format('woff2');
 	}
 
 	body {
