--- a/layouts/partials/fonts.html
+++ b/layouts/partials/fonts.html
@@ -1,24 +1,9 @@
 <style>
-	@font-face {
-		font-family: Vollkorn;
-		font-style: normal;
-		font-weight: normal;
-		font-stretch: normal;
-		src: url('/fonts/Vollkorn-VariableFont_wght.woff2') format('woff2');
-	}
-	@font-face {
-		font-family: Vollkorn;
-		font-style: italic;
-		font-weight: normal;
-		font-stretch: normal;
-		src: url('/fonts/Vollkorn-Italic-VariableFont_wght.woff2') format('woff2');
-	}
-
 	body {
-		font-family: 'Vollkorn', serif;
+		font-family: 'Palatino','Palatino Linotype','URW Palladio L','P052', serif;
 		font-size: 1.12em;
 		word-spacing: 1.5px;
-		letter-spacing: -.2px;
+		letter-spacing: -.1px;
 	}
 	code {
 		font-size: .9em;
