--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -1,5 +1,5 @@
 .article {
-	margin-block: 40px;
+	margin-block: 50px;
 	margin-inline: 20px;
 }
 .articleheading>.heading {
@@ -16,10 +16,8 @@
 	max-width: 540px;
 }
 @media only screen and (min-width: 780px) {
-	.content {
-		max-width: 540px;
-	}
 	.article {
+		margin-block: 100px;
 		max-width: 800px;
 		display: grid;
 		column-gap: 40px;
@@ -87,4 +85,8 @@
 }
 .next {
 	text-align: right;
+}
+a[href*='//']::after {
+  content: url("data:image/svg+xml,%3Csvg%20%20xmlns=%22http://www.w3.org/2000/svg%22%20%20width=%2212%22%20%20height=%2212%22%20%20viewBox=%220%200%2024%2024%22%20%20fill=%22none%22%20%20stroke=%22rgb(32, 103, 155)%22%20%20stroke-width=%221.25%22%20%20stroke-linecap=%22round%22%20%20stroke-linejoin=%22round%22%20%20class=%22icon%20icon-tabler%20icons-tabler-outline%20icon-tabler-external-link%22%3E%3Cpath%20stroke=%22none%22%20d=%22M0%200h24v24H0z%22%20fill=%22none%22/%3E%3Cpath%20d=%22M12%206h-6a2%202%200%200%200%20-2%202v10a2%202%200%200%200%202%202h10a2%202%200%200%200%202%20-2v-6%22%20/%3E%3Cpath%20d=%22M11%2013l9%20-9%22%20/%3E%3Cpath%20d=%22M15%204h5v5%22%20/%3E%3C/svg%3E");
+  margin-left: 1px;
 }
