--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,13 +52,19 @@ body {
 	border: 8px solid var(--marker-orange);
 	height: 100%;
 	width: 100%;
-	margin: 0;
+	margin: auto;
 	padding: 0;
 	overflow: scroll;
 	display: flex;
 	flex-direction: column;
 	place-items: center;
-	justify-content: space-between;
+}
+footer {
+	width: 100%;
+	text-align: center;
+	position: sticky;
+	bottom: 0;
+	background: white;
 }
 
 /* ------------------------------------
@@ -94,11 +100,16 @@ footer>ul>li {
 /* ------------------------------------
 * Within main
 * ---------------------------------- */
-
+main {
+	margin: auto;
+	max-width: 100%;
+}
 h2,h3,h4,h5,h6 {
 	font-weight: 600;
 }
-
+p,ul,ol{
+	line-height: 1.5;
+}
 /* ------------------------------------
 * General elements
 * ---------------------------------- */
@@ -153,7 +164,6 @@ a.icon {
 	text-decoration: none;
 	background: none;
 }
-
 /* Codeblock */
 pre {
 	padding: 12px;
@@ -244,4 +254,22 @@ blockquote + p {
   text-align: right;
   margin-right: 20px;
   margin-block: 0;
+}
+
+/* ------------------------------------
+* taxonomy
+* ---------------------------------- */
+.categories {
+	list-style: none;
+	padding: 0;
+	font-style: italic;
+	li {
+		display: inline;
+		margin-inline: 0 4px;
+		a {
+			color: var(--pen-regular);
+			font-weight: normal;
+			text-decoration: none;
+		}
+	}
 }
