--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -15,14 +15,14 @@
 	background: white;
 	max-width: 540px;
 }
-@media only screen and (min-width: 780px) {
+@media only screen and (min-width: 960px) {
 	.article {
 		margin-block: 100px;
-		max-width: 800px;
+		max-width: 960px;
 		display: grid;
 		column-gap: 40px;
-		grid-template-areas: "h h" "c s";
-		grid-template-columns: auto 220px;
+		grid-template-areas: ". h h" ". c s" ". pn .";
+		grid-template-columns: 100px 540px 200px;
 	}
 	.articleheading {
 		grid-area: h;
@@ -33,6 +33,9 @@
 	.articleside {
 		display: block;
 		grid-area: s;
+	}
+	.prevnext {
+		grid-area: pn;
 	}
 	.sticky {
 		position: sticky;
