--- a/layouts/partials/fonts.html
+++ b/layouts/partials/fonts.html
@@ -1,8 +1,53 @@
 <style>
+	/*historic build of Spectral that uses curly quotes
+	github.com/productiontype/Spectral.git @ 68414e1f*/
+	@font-face {
+		font-family: 'Spectral';
+		font-style: normal;
+		font-weight: 400;
+		font-display: swap;
+		src: url(/fonts/spectral-regular.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Spectral';
+		font-style: italic;
+		font-weight: 400;
+		font-display: swap;
+		src: url(/fonts/spectral-italic.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Spectral';
+		font-style: normal;
+		font-weight: 600;
+		font-display: swap;
+		src: url(/fonts/spectral-semibold.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Spectral';
+		font-style: italic;
+		font-weight: 600;
+		font-display: swap;
+		src: url(/fonts/spectral-semibolditalic.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Spectral';
+		font-style: normal;
+		font-weight: 700;
+		font-display: swap;
+		src: url(/fonts/spectral-bold.woff2) format('woff2');
+	}
+	@font-face {
+		font-family: 'Spectral';
+		font-style: italic;
+		font-weight: 700;
+		font-display: swap;
+		src: url(/fonts/spectral-bolditalic.woff2) format('woff2');
+	}
 	body {
-		font-family: 'Palatino','Palatino Linotype','URW Palladio L','P052', serif;
-		font-size: 1.12em;
-		word-spacing: 1.5px;
+		font-family: 'Spectral','Palatino','Palatino Linotype','URW Palladio L','P052', serif;
+		font-size: 1.16em;
+		word-spacing: 1.4px;
+		letter-spacing: -.1px;
 	}
 	code {
 		font-size: .9em;
