--- a/layouts/baseof.html
+++ b/layouts/baseof.html
@@ -26,7 +26,7 @@
 	<li>{{ .Site.Copyright }}</li>
 	<li><a class=homeref href="/">{{ site.Params.home }}</a></li>
 	{{ range site.Params.footerLinks }}
-	<li><a href="{{ .url }}">{{ .label }}</a></li>
+	<li><a href="{{ .url }}">{{ .label }} {{ with .icon }} {{ . | safeHTML }} {{ end }}</a></li>
 	{{ end }}
 	</li>
 </ul>
