--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,28 +1,35 @@
 /* Cardboard (Home/Section navigation) */
 .cardboard {
-	max-width: 780px;
+	max-width: 960px;
 	list-style: none;
 	padding-inline: 0;
 	display: grid;
-	gap: 12px;
+	gap: 32px;
 	grid-template-columns: auto;
 	@media only screen and (min-width: 375px) {
 		grid-template-columns: repeat(1,1fr);
+		margin: 20px;
 	}
 	@media only screen and (min-width: 540px) {
 		grid-template-columns: repeat(2,1fr);
+		margin: 30px;
 	}
-	@media only screen and (min-width:700px) {
+	@media only screen and (min-width:800px) {
 		grid-template-columns: repeat(3,1fr);
+		margin: 50px;
 	}
 }
 .card {
 	background: white;
 	padding: 12px;
 	min-height: 120px;
+	@media only screen and (min-width:540px) {
+		max-width: 250px;
+	}
 }
 .card a {
 	font-weight: 600;
+	text-decoration-line: none;
 }
 .card .heading {
 	margin: 0 0 4px;
@@ -48,12 +55,14 @@
 .card.profile {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	h1 {
+		font-size: 1.5em;
+		margin-block: 0;
+	}
 }
 .contacts {
 	list-style: none;
 	padding-inline: 0;
-	flex-wrap: wrap;
 }
 .contact {
 	display:inline;
