--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,9 @@ body {
 	color: var(--pen-regular);
 	padding-top: 20px;
 	border: 8px solid var(--marker-orange);
+	border-image: linear-gradient(90deg,
+		var(--marker-orange) 0%,
+		var(--marker-green) 100%) 1;
 	height: 100%;
 	width: 100%;
 	margin: auto;
@@ -64,12 +67,18 @@ body {
 	flex-direction: column;
 	place-items: center;
 }
-footer {
-	width: 100%;
-	text-align: center;
-	position: sticky;
-	bottom: 0;
-	background: white;
+
+.inbox {
+	position: relative;
+	display: flex;
+	flex-direction: row;
+	align-items: end;
+}
+#mailbox {
+	height: 60px;
+}
+#mailbox:hover {
+	cursor: pointer;
 }
 
 /* ------------------------------------
@@ -88,14 +97,14 @@ footer a {
 }
 footer>ul{
 	list-style-type: none;
-	margin-inline: 0;
-	padding-inline: 0;
+	margin: 20px 0 10px;
+	padding:0;
 }
 footer>ul>li {
 	display: inline;
 	&:before {
 		content: '|';
-		margin: 0 4px;
+		margin: 0 8px;
 	}
 	&:first-child:before{
 		content: none;
