--- a/layouts/_markup/render-blockquote-alert.html
+++ b/layouts/_markup/render-blockquote-alert.html
@@ -1,10 +1,8 @@
 <div class="callout">
+  {{ with ( or .AlertTitle ( i18n .AlertType ) )}}
   <p class="callout-heading">
-    {{ with .AlertTitle }}
     {{ . }}
-    {{ else }}
-    {{ ( or (i18n .AlertType) (title .AlertType) ) }}
-    {{ end }}
   </p>
+  {{ end }}
   {{ .Text }}
 </div>
