--- a/layouts/partials/fonts.html
+++ b/layouts/partials/fonts.html
@@ -45,12 +45,13 @@
 	}
 	body {
 		font-family: 'Spectral','Palatino','Palatino Linotype','URW Palladio L','P052', serif;
-		font-size: 1.16em;
-		word-spacing: 1.4px;
-		letter-spacing: -.1px;
+		font-size: 18px;
+		word-spacing: 1.3px;
+		letter-spacing: -.2px;
 	}
 	code {
-		font-size: .9em;
+		font-family: 'Adwaita Mono', monospace;
+		font-size: 13px;
 		word-spacing: normal;
 		letter-spacing: normal;
 	}
