--- a/layouts/home.html
+++ b/layouts/home.html
@@ -42,7 +42,7 @@
 	</div>
 </div>
 <div class="carddesc">
-	<p><em>or find me on</em></p>
+	<p><em>{{ i18n "socials" }}</em></p>
 	<ul class="contacts" style='display:inline'>
 		{{- range .socials -}}
 		<li class="contact">
