--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,8 +53,7 @@ html {
 
 body {
 	color: var(--pen-regular);
-	padding-top: 20px;
-	border: 8px solid var(--marker-orange);
+	border: 8px solid;
 	border-image: linear-gradient(90deg,
 		var(--marker-orange) 0%,
 		var(--marker-green) 100%) 1;
@@ -66,19 +65,6 @@ body {
 	display: flex;
 	flex-direction: column;
 	place-items: center;
-}
-
-.inbox {
-	position: relative;
-	display: flex;
-	flex-direction: row;
-	align-items: end;
-}
-#mailbox {
-	height: 60px;
-}
-#mailbox:hover {
-	cursor: pointer;
 }
 
 /* ------------------------------------
@@ -114,21 +100,19 @@ footer>ul>li {
 /* ------------------------------------
 * Within main
 * ---------------------------------- */
+
 main {
 	margin: auto;
 	max-width: 100%;
 }
 h2,h3,h4,h5,h6 {
 	font-weight: 600;
+	margin-block: 2em .67em;
 }
-
-/* ------------------------------------
-* General elements
-* ---------------------------------- */
 
 figure {
 	padding: 0;
-	margin: 10px 0;
+	margin: 40px 0;
 }
 figcaption {
 	font-style: italic;
@@ -138,14 +122,12 @@ figcaption {
 img {
 	max-width: 100%;
 }
+
 hr {
 	background:#eee;
 	margin-block: 2rem;
 	height:1px;
 	border: none;
-}
-h2 {
-	margin-block: 2em .67em;
 }
 p {
 	margin-bottom: 1.7em;
@@ -191,11 +173,14 @@ p>code {
 * callouts
 * ---------------------------------- */
 .callout {
-	padding: 1.5em;
-	margin: 1em -1em;
+	padding: 1em 1.67em;
+	margin: 2em -1em;
 	font-size: .9em;
 	border: 2px dotted var(--marker-orange);
 	border-radius: 8px;
+	p {
+		margin-block: .67em;
+	}
 }
 .callout>ul{
 	padding-inline: 20px;
